[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Scripts/Coletavel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_006.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_003.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_004.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_008.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_010.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_011.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_009.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_007.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_001.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_002.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_005.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 27.1757

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 2 )
frame = 7
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.132431, -3.8147e-06 )
scale = Vector2( 2.65541, 3.14541 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
